# AI-Trader

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  daily-report.yml  deploy-pages.yml
config/: strategy.yaml
data/: sample_candles.csv
docs/: ARCHITECTURE.md  PLAN.md
src/aitrader/: __init__.py  account.py  backtest.py  broker.py  cli.py  config.py  data.py  env.py  indicators.py  models.py  reporting.py  strategy.py  toss_client.py
tests/: test_account.py  test_backtest_reporting.py  test_broker.py  test_env.py  test_indicators_strategy.py  test_toss_client.py
web/: index.html  package-lock.json  package.json
web/public/: dashboard-data.json
web/src/: App.tsx  styles.css
